@@ -1,3 +1,7 @@
+2004-10-06  Corinna Vinschen  <corinna@vinschen.de>
+
+	* strace.cc (_impure_ptr): Remove.
+
 2004-10-06  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
 
 	* cygcheck.cc (dump_sysinfo): Warn about empty path-components.
